--- a/contrail/frontend/templates/instance.html
+++ b/contrail/frontend/templates/instance.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 style="text-align: center;">Instance {{ instance.instance_type }}</h1>
+        <h1 style="text-align: center;">Instance {{ instance.instanceType }}</h1>
       </div>
     </div>
   </div>
@@ -26,12 +26,6 @@
 
         <br><br><br>
         <table id="instances" class="table table-striped table-hover table-bordered" style="width:100%">
-            <thead>
-                <tr>
-                    <th>Instance</th>
-                    <td>{{ instance.instance_type }}</td>
-                </tr>
-            </thead>
             <tbody>
 
               <tr>
@@ -52,6 +46,11 @@
               <tr>
                 <th>Memory</th>
                 <td>{{ instance.memory }}</td>
+              </tr>
+
+              <tr>
+                <th>GPU</th>
+                <td>{{ instance.gpu }}</td>
               </tr>
 
               <tr>
@@ -99,17 +98,12 @@
 
             <tr>
               <th>Price Type</th>
-              <td>{{ instance.price_type }}</td>
+              <td>{{ instance.price.type }}</td>
             </tr>
 
             <tr>
               <th>Price</th>
-              <td>{{ instance.memory }}</td>
-            </tr>
-
-            <tr>
-              <th>Price Unit</th>
-              <td>{{ instance.price_unit }}</td>
+              <td>{{ instance.price.hourly }}</td>
             </tr>
 
           </tbody>
@@ -121,7 +115,7 @@
             <div class="card">
               <div class="card-body">
                 <h4 class="card-title">On Demand</h4><hr>
-                <h5 class="card-title"><span style="font-size: 3em;">$0.5</span> per hour</h5>
+                <h5 class="card-title"><span style="font-size: 3em;">${{ instance.price.0.hourly }}</span> per hour</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
