--- a/contrail/frontend/templates/price.html
+++ b/contrail/frontend/templates/price.html
@@ -143,24 +143,8 @@
             <i class="fas fa-align-left"></i>
             <span>Set Attributes</span>
         </button>
-        <br>
+        <br><br><br>
 
-        <nav id="subnav" class="navbar navbar-expand-lg navbar-light bg-light">
-              <ul id="subnav" class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#">All</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">On Demand</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Reserved</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Spot</a>
-                    </li>
-              </ul>
-        </nav>
 
         <table id="instances" class="table table-striped table-bordered" style="width:100%">
           <thead>
@@ -186,7 +170,7 @@
               <td>{{ instance.vcpus }}</td>
               <td>{{ instance.memory }}</td>
               <td>{{ instance.clock_speed }}</td>
-              <td>{% if instance.price_type == 'on_demand' %}on demand{% endif %}</td>
+              <td>{{ instance.priceType }}</td>
               <td>{% if instance.priceUpfront %}${{ instance.priceUpfront | floatformat:3 }}{% else %}none{% endif %}</td>
               <td>${{ instance.pricePerHour }}</td>
             </tr>
