--- a/contrail/frontend/templates/price.html
+++ b/contrail/frontend/templates/price.html
@@ -55,6 +55,35 @@
         </div>
       </div>
 
+      <label class="form-check-label">Price Type</label>
+
+      <div class="form-group">
+        <div id="div_id_on_demand" class="form-check">
+          <label for="id_on_demand" class="form-check-label">
+            <input type="checkbox" name="on_demand" class="checkboxinput form-check-input" id="id_on_demand" checked="">
+                On demand
+          </label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div id="div_id_reserved" class="form-check">
+          <label for="id_reserved" class="form-check-label">
+            <input type="checkbox" name="reserved" class="checkboxinput form-check-input" id="id_reserved" checked="">
+                Reserved
+          </label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div id="div_id_spot" class="form-check">
+          <label for="id_spot" class="form-check-label">
+            <input type="checkbox" name="spot" class="checkboxinput form-check-input" id="id_spot" checked="">
+                    Spot
+          </label>
+        </div>
+      </div>
+
 
       <label for="id_memory" class="col-form-label ">
           Memory
