--- a/contrail/frontend/templates/price.html
+++ b/contrail/frontend/templates/price.html
@@ -45,6 +45,16 @@
         </div>
       </div>
 
+      <div id="div_id_operating_system" class="form-group">
+        <label for="id_operating_system" class="col-form-label ">
+                Operating system
+        </label>
+        <div class="">
+          <select name="operating_system" class="select form-control" id="id_operating_system"> <option value="" selected="">All</option> <option value="Linux">Linux</option> <option value="RHEL">RHEL</option> <option value="SLES">SLES</option> <option value="Windows">Windows</option> <option value="Windows with SQL Standard">Windows with SQL Standard</option> <option value="Windows with SQL Web">Windows with SQL Web</option> <option value="Windows with SQL Enterprise">Windows with SQL Enterprise</option> <option value="Linux with SQL Standard">Linux with SQL Standard</option> <option value="Linux with SQL Web">Linux with SQL Web</option> <option value="Linux with SQL Enterprise">Linux with SQL Enterprise</option>
+          </select>
+        </div>
+      </div>
+
       <div id="div_id_region" class="form-group">
         <label for="id_region" class="col-form-label ">
            Region
@@ -193,12 +203,12 @@
 
           {% for instance in instances %}
             <tr>
-              <td><a href="/instance/?provider=AmazonEC2">{{ instance.instance_type }}</a></td>
+              <td><a href="{{ instance.url }}">{{ instance.instanceType }}</a></td>
               <!-- <td>{{ instance.provider }}</td> -->
               <td>{{ instance.region }}</td>
               <td>{{ instance.vcpus }}</td>
               <td>{{ instance.memory }}</td>
-              <td>{{ instance.clock_speed }}</td>
+              <td>{{ instance.clockSpeed }}</td>
               <td>{{ instance.priceType }}</td>
               <td>{% if instance.priceUpfront %}${{ instance.priceUpfront | floatformat:3 }}{% else %}none{% endif %}</td>
               <td>${{ instance.pricePerHour }}</td>
