integrate compare page with get prices, adds help page

--- a/contrail/frontend/staticfiles/css/sidebar.css
+++ b/contrail/frontend/staticfiles/css/sidebar.css
@@ -117,6 +117,10 @@ ul#subnav > li {
     background: #fff;
 }
 
+#sidebar a {
+  display: block;
+}
+
 /* #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
