--- a/contrail/frontend/templates/base.html
+++ b/contrail/frontend/templates/base.html
@@ -56,7 +56,7 @@
             <a class="nav-link js-scroll-trigger" href="{% url "price" %}">Get Prices</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url "compare" %}">Compare</a>
+            <a class="nav-link js-scroll-trigger" href="{% url "help" %}">Help</a>
           </li>
         </ul>
       </div>
