--- a/contrail/frontend/templates/price.html
+++ b/contrail/frontend/templates/price.html
@@ -182,7 +182,7 @@
             <i class="fas fa-align-left"></i>
             <span>Set Attributes</span>
         </button>
-        <br><br><br>
+        <br><br>
 
 
         <table id="instances" class="table table-striped table-bordered" style="width:100%">
@@ -231,7 +231,76 @@
               </tr>
           </tfoot>
       </table>
+
+      <br>
+
+      <button id="comparebutton" class="btn btn-info">
+          Compare
+      </button>
+
+      <div class="line"></div>
+
+      <div id="comparepop" class="compareview">
+        <div class="compare-container">
+          <span class="close">&times;</span>
+          <table id="instancesComp" class="table table-striped table-hover table-bordered comparetable" style="width:100%">
+            <thead>
+              <tr>
+                <th style="width:40%">Specifications</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Region</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>vCPUs</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Memory (GiB)</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Clock Speed</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Price Type</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Price Upfront</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Price Per Hour</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+        </table>
+      </div>
     </div>
+
+  </div>
 
 </div>
 
@@ -289,7 +358,75 @@
 
 </script>
 
+<!-- SELECTION -->
+<script type="text/javascript">
+  $(document).ready(function() {
+  	 var table = $('#instances').DataTable();
+     table.selectedProducts = 0;
 
+    // selecting products
+    $('#instances tbody').on( 'click', 'tr', function () {
+      if ($(this).hasClass('selected')) {
+        $(this).removeClass('selected');
+        table.selectedProducts -= 1;
+      } else if (table.selectedProducts < 3 && !$(this).hasClass('selected')) {
+          $(this).addClass('selected');
+          table.selectedProducts += 1;
+      } else if (table.selectedProducts >= 3) {
+        alert("Please only select up to 3 instances to be compared.");
+      }
+    } );
+
+  } );
+</script>
+
+<!-- COMPARISON -->
+<script type="text/javascript">
+  var comparePop = document.getElementById('comparepop');
+  var btn = document.getElementById('comparebutton');
+  var span = document.getElementsByClassName("close")[0];
+  var compareTable = document.getElementById('instancesComp');
+  var numSpecs = document.getElementById('instances').rows[0].cells.length;
+  btn.onclick = function() {
+    comparePop.style.display = "block";
+    var selectedRows = document.querySelectorAll(".selected");
+    var numSelected = selectedRows.length;
+
+    if (numSelected <= 1) {
+      alert("Please select more than 1 instance to be compared.");
+      document.getElementById("comparepop").style.display = "none";
+    }
+    else {
+      for (var i = 1; i <= numSelected; i++) {
+        for (var j = 0; j < numSpecs; j++) {
+          compareTable.rows[j].cells[i].append(selectedRows[i-1].cells[j].innerText);
+        }
+      }
+    }
+ }
+  span.onclick = function() {
+    comparePop.style.display = "none";
+    var selectedRows = document.querySelectorAll(".selected");
+    var numSelected = selectedRows.length;
+    for (var i = 1; i <= numSelected; i++) {
+      for (var j = 0; j < numSpecs; j++) {
+        compareTable.rows[j].cells[i].innerHTML = "";
+      }
+    }
+  }
+  window.onclick = function(event) {
+    if (event.target == comparePop) {
+    comparePop.style.display = "none";
+      var selectedRows = document.querySelectorAll(".selected");
+      var numSelected = selectedRows.length;
+      for (var i = 1; i <= numSelected; i++) {
+        for (var j = 0; j < numSpecs; j++) {
+          compareTable.rows[j].cells[i].innerHTML = "";
+        }
+      }
+    }
+  }
+</script>
 
 
 
