Tweak slider positions

--- a/contrail/frontend/apps/contrailsite/templates/list.html
+++ b/contrail/frontend/apps/contrailsite/templates/list.html
@@ -93,7 +93,7 @@
 
 
       <label for="id_memory" class="col-form-label ">
-          Memory
+          Memory (GB)
       </label>
       <div class="range-slider">
           <input type="text" class="memory-range-slider" value="" />
@@ -190,7 +190,7 @@
                   <th>Region</th>
                   <th>OS</th>
                   <th>vCPUs</th>
-                  <th>Memory (GiB)</th>
+                  <th>Memory (GB)</th>
                   <th>Price Type</th>
                   <th>Price Per Hour</th>
               </tr>
